src/objects/Product__c.object
<CustomObject>
    <description>Owner - Roopal Shah</description>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Customer_Information__r.Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Add_On_Module_s__c</fullName>
        <label>Add On Module(s)</label>
        <picklist>
            <picklistValues>
                <fullName>Client Data Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rating Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reinsurance Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standards-based Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Reporting</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Add_on_Module_Deal_Close_Date_s__c</fullName>
        <label>Add on Module Deal Close Date - DELETE</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Annual_Claim_Volume__c</fullName>
        <label>Annual Claim Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Server__c</fullName>
        <label>Application Server</label>
        <picklist>
            <picklistValues>
                <fullName>JBoss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tomcat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Websphere</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BFO_License_Date__c</fullName>
        <label>BFO License Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Check_Allows__c</fullName>
        <label>Contract Allows External Use?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Data_Management_Close_Date__c</fullName>
        <label>Client Data Management Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cognos_License_Date__c</fullName>
        <label>Cognos License Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Competition__c</fullName>
        <label>Competition</label>
        <picklist>
            <picklistValues>
                <fullName>1insurer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3i Infotech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accenture-Duck Creek</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acturis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adacta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adaptik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agencyport Software (fka: Sword Ins.)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aon eSolutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AQS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueWave Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Camilion Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CCS (Combined Computer Services)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CGI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CodeObjects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comarch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comtec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cover-All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CSC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Build</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delphi Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Duck Creek Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>eBaoTech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EIS (Exigen)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exigen Insurance Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fadata</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FINEOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FirstApex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDIT Technologies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDP</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Current_Development_Version__c</fullName>
        <description>Current version of software customer is running in their development instance. Include major &amp; minor release details.</description>
        <inlineHelpText>Current version of software customer is running in their development instance. Include major &amp; minor release details.</inlineHelpText>
        <label>Current Development Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Minor_Version__c</fullName>
        <label>Current Minor Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Product_Version__c</fullName>
        <label>Current Product Version</label>
        <picklist>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Information</label>
        <referenceTo>Customer_Information__c</referenceTo>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Database_Server__c</fullName>
        <label>Database Server</label>
        <picklist>
            <picklistValues>
                <fullName>MS SQL Server</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle RAC</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deal_Close_Date__c</fullName>
        <label>Product Deal Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Digital_Portal_Products_Purchased__c</fullName>
        <label>Digital Portal Products Purchased</label>
        <picklist>
            <picklistValues>
                <fullName>Quote &amp; Buy Portal for Policyholders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Mgmt Portal for Policyholders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claim Portal for Policyholders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claim Portal for Vendors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Claim Portal for Agents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gateway Portal for Agents</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Extended_Support__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used for Roll Up Helper.  Ties Product to Extended Support.</description>
        <label>Extended Support</label>
        <referenceTo>Extended_Support__c</referenceTo>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>First_Go_Live_Date__c</fullName>
        <label>Product First Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Upgrade_Start_Date__c</fullName>
        <label>Upgrade Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GWRE_and_Millbrook_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>GWRE and Millbrook Customer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GW_Live_Offerings_Purchased__c</fullName>
        <label>GW Live Offerings Purchased</label>
        <picklist>
            <picklistValues>
                <fullName>Claim Canvas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compare Plus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hail Forensics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MyAgents</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spotlight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ViewPoint</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Go_Live_Date__c</fullName>
        <description>field was renamed as Delete by Brooke T on March 7th.  Removed by Niki Vankerk Apr 24th and added back to page layouts as per Zinnia Ho</description>
        <label>Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Duration_Days__c</fullName>
        <formula>First_Go_Live_Date__c -  Product_First_Implementation_Start_Date__c</formula>
        <label>Implementation Duration (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implementation_Incidents__c</fullName>
        <label>Implementation Incidents</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implementation_Start_Date__c</fullName>
        <label>Implementation Start Date - DELETE</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Status__c</fullName>
        <label>Implementation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Implementing</fullName>
                <color>#FF9900</color>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
                <color>#999999</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>InetSoft_License_Date__c</fullName>
        <label>InetSoft License Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LOBs_in_Scope__c</fullName>
        <label>LOBs in Scope</label>
        <picklist>
            <picklistValues>
                <fullName>Agency Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Bill</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Auto</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Aviation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Bus. Owner’s Policy (BOP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Casualty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Crime/public liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Dir. &amp; Officers Liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Environment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Excess &amp; Surplus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Farm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Fire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - General Liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Inland Marine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Medical Malpractice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Mortgage (LMI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Multi-peril</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Ocean Marine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Package Policy (CPP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Political risks &amp; conting.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Professional Liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Specialty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Surety</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial - Umbrella</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Life &amp; Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal - Accident &amp; Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Personal - Auto</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <picklist>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finnish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Millbrook_Products_Purchased__c</fullName>
        <label>Millbrook Products Purchased</label>
        <picklist>
            <picklistValues>
                <fullName>Millbrook BI Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Millbrook ODS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MyAgents</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Mobile_Portals_Close_Date__c</fullName>
        <label>Mobile &amp; Portals Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_Customer_Instance__c</fullName>
        <description>Used for Brad&apos;s export report to avoid having to convert the text from a checkbox to number.</description>
        <formula>if ( New_Customer__c , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New Customer Instance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select if Product is for a new Customer - when selected, the related Customer Information will be auto-checked as a New Customer as well.</inlineHelpText>
        <label>New Customer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_Major_Upgrades__c</fullName>
        <label># of Major Upgrades</label>
        <summaryFilterItems>
            <field>Upgrades__c.Upgrade_Type__c</field>
            <operation>equals</operation>
            <value>Major Upgrade</value>
        </summaryFilterItems>
        <summaryForeignKey>Upgrades__c.Upgrade_History__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Out_Clause_End_Date__c</fullName>
        <label>Out Clause End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Predictive_Analytics_Products_Purchased__c</fullName>
        <label>Predictive Analytics Products Purchased</label>
        <picklist>
            <picklistValues>
                <fullName>Predictive Analytics for Profitability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive Analytics for Claims</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Previous_Core_System__c</fullName>
        <label>Previous Core System</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Support_Partner_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Support Partner Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>startsWith</operation>
                <value>Guidewire</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_First_Implementation_Start_Date__c</fullName>
        <label>Product First Implementation Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Functionality_Implemented__c</fullName>
        <label>Product Functionality Implemented</label>
        <picklist>
            <picklistValues>
                <fullName>Common</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Center (CC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Infrastructure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premium Reporting (BC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suite Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Product_Notes__c</fullName>
        <label>Product Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Production_Incidents__c</fullName>
        <label>Production Incidents</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>BillingCenter</fullName>
                <color>#FF6600</color>
            </picklistValues>
            <picklistValues>
                <fullName>ClaimCenter</fullName>
                <color>#009900</color>
            </picklistValues>
            <picklistValues>
                <fullName>PolicyCenter</fullName>
                <color>#6633FF</color>
            </picklistValues>
            <picklistValues>
                <fullName>Guidewire Live</fullName>
                <color>#CC0000</color>
            </picklistValues>
            <picklistValues>
                <fullName>DataHub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>InfoCenter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Millbrook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Portals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BIIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Predictive Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smart Communications</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rating_Management_Close_Date__c</fullName>
        <label>Rating Management Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reinsurance_Management_Close_Date__c</fullName>
        <label>Reinsurance Management Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reporting_Status__c</fullName>
        <label>Reporting Status</label>
        <picklist>
            <picklistValues>
                <fullName>Evaluating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SI_Prime_Old__c</fullName>
        <label>SI Prime DELETE</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SI_Prime__c</fullName>
        <label>SI Prime</label>
        <picklist>
            <picklistValues>
                <fullName>Adaptra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Agility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capgemini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CastleBay Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centric</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CGI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cognizant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deloitte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E&amp;Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PwC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sollers Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenzing</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SI_Staff_Aug_old__c</fullName>
        <label>SI Staff Aug DELETE</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SI_Staff_Augmentation__c</fullName>
        <label>SI Staff Augmentation</label>
        <picklist>
            <picklistValues>
                <fullName>Adaptra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Agility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capgemini</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CastleBay Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cognizant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deloitte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E&amp;Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HCL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PwC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sollers Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tenzing</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Services_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Services Account Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Name</field>
                <operation>startsWith</operation>
                <value>Guidewire</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Standard_Reporting_Close_Date__c</fullName>
        <label>Standard Reporting Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Standards_based_Templates_Close_Date__c</fullName>
        <label>Standards-based Templates Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Incidents__c</fullName>
        <formula>Production_Incidents__c  +  Implementation_Incidents__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Number of Incidents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upgrade_End_Date__c</fullName>
        <label>Upgrade End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Upgrade_Notes__c</fullName>
        <label>Upgrade Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Upgrade_details__c</fullName>
        <label>Last Version Upgraded From</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Upgraded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Upgraded?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>of_Client_Accounts__c</fullName>
        <label># of Client Accounts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_External_Users__c</fullName>
        <label># of External Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Internal_Users__c</fullName>
        <label># of Internal Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Policies__c</fullName>
        <label># of Policies</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_Total_Users__c</fullName>
        <label># of Total Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product(C)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Products__c</columns>
        <columns>Upgraded__c</columns>
        <columns>Implementation_Status__c</columns>
        <columns>First_Go_Live_Date__c</columns>
        <columns>Current_Product_Version__c</columns>
        <columns>Add_On_Module_s__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Upgrades</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Products__c</columns>
        <columns>Upgraded__c</columns>
        <columns>Number_of_Major_Upgrades__c</columns>
        <columns>Current_Product_Version__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Number_of_Major_Upgrades__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>All Upgrades</label>
        <language>en_US</language>
    </listViews>
</CustomObject>